# rate-my-haselnuss

./: CMakeLists.txt  Makefile  Readme.md  colors.h  config.json  controller.cpp  controller.h  cvimagewidget.h  detectionprocessing.cpp  detectionprocessing.h  filenames.cpp  filenames.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  neuralnet.cpp  neuralnet.h  processing.cpp  processing.h  processingstep.h  rateprocessing.cpp  rateprocessing.h
data/: input.csv  nuts.net  output.csv
test_data/: .directory
